feat: implement ieta-cdc-core release requirements R1-R9
Flink slots/replicas/memory parameterized via .env (21 slots x 3 TMs), flink-jobmanager healthcheck, Linux status host probes, flink_lib connector staging script, es7-cdc optional auth, optional least-privilege postgres roles, publish-release.ps1 with dirty-worktree refusal and archive RepoTag verification, port consistency check, CDC compatibility declarations.